# psdaq-reducers

./: .gitmodules  LICENSE.md  README.md  build_all.sh
lc/: CMakeLists.txt
lc/cmake/: Installing.cmake
pfpl/: CMakeLists.txt
pfpl/app/: f32_abs_comp_gpu.cu
pfpl/cmake/: Installing.cmake
